feat(api@providers): add additional columns to providers
