# swagger/v1/swagger.json
@@ -528,16 +528,39 @@
           "example": "Av. Francisco Bilbao 223",
           "x-nullable": true
         },
+        "email": {
+          "type": "string",
+          "example": "jumbo@uc.cl",
+          "x-nullable": true
+        },
+        "phone": {
+          "type": "string",
+          "example": "+56 2 99222122",
+          "x-nullable": true
+        },
         "country": {
           "type": "string",
           "example": "Chile",
           "x-nullable": true
+        },
+        "webpage_url": {
+          "type": "string",
+          "example": "https://jumbo.cl",
+          "x-nullable": true
+        },
+        "delivery_days": {
+          "type": "integer",
+          "example": 1,
+          "x-nullable": true
+        },
+        "minimum_purchase": {
+          "type": "integer",
+          "example": 15000,
+          "x-nullable": true
         }
       },
       "required": [
-        "name",
-        "address",
-        "country"
+        "name"
       ]
     },
     "provider_response": {
@@ -564,9 +587,34 @@
               "example": "Av. Francisco Bilbao 223",
               "x-nullable": true
             },
+            "email": {
+              "type": "string",
+              "example": "jumbo@uc.cl",
+              "x-nullable": true
+            },
+            "phone": {
+              "type": "string",
+              "example": "+56 2 99222122",
+              "x-nullable": true
+            },
             "country": {
               "type": "string",
               "example": "Chile",
+              "x-nullable": true
+            },
+            "webpage_url": {
+              "type": "string",
+              "example": "https://jumbo.cl",
+              "x-nullable": true
+            },
+            "delivery_days": {
+              "type": "integer",
+              "example": 1,
+              "x-nullable": true
+            },
+            "minimum_purchase": {
+              "type": "integer",
+              "example": 15000,
               "x-nullable": true
             },
             "created_at": {
